--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = (f.xbq)?f.xbq.queue:[];
         t = b.createElement(e); t.async = !0; t.src = v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s);
       })
-      (window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js', 'https://d295jelhsufe0a.cloudfront.net/sdk/1416868079860788075/events.js');
+      (window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js', 'https://ca-a1eca0b05caa4a1786366e100db316d1.ecs.us-east-1.on.aws//sdk/6122150623088220051/events.js');
       fbq('init', '1911186486162470');fbq('track', 'PageView');
       cbq('setHost', 'https://d295jelhsufe0a.cloudfront.net/');
     cbq('init', '6122150623088220051');
