--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
-811335677866467
+<p><!-- 
+  Test SG Site (CBQ)- <!-- Original & Modified Body code -->
+    <br />
+</p>
 
 <head>
-<!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '25672667502398063');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=25672667502398063&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+<!-- ---------------------------------------------------------------------------------- -->
+
+  <!-- Signals Gateway Pixel + Meta Pixel Code -->
+  <!-- Signals Gateway Pixel Code -->
+    <script>
+    !function(a,h,e,v,n,t,s){
+      if(a.cbq)return;
+      n=a.cbq=function(){n.callMethod ? n.callMethod.apply(n,arguments) : n.queue.push(arguments);};
+      if(!a._cbq)a._cbq=n;
+      n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];
+      t=h.createElement(e);t.async=!0; t.src=v;s=h.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s);
+    }(window, document,'script', 'https://static.sg-testsite2026em0121.testem.cbinternal.com/sdk/8964899511532828848/events.js');
+    cbq('setHost', 'https://ca-4c164f4c93b745f4897ab6b563bdd05e.ecs.us-east-2.on.aws/');
+    cbq('init', '8964899511532828848');
+    cbq('track', 'PageView');
+    </script>
+  <!-- End Signals Gateway Pixel Code -->
+  <!-- End Signals Gateway Pixel + Meta Pixel Code -->
+
+
+
+
 
 
 
 
   
+<!-- ---------------------------------------------------------------------------------- -->
+<!-- Modified CBQ body Code -->
+  <!-- 
 <meta name="facebook-domain-verification" content="qowwrhpyni79cf2pms3zixyrxoh3b4" />
 <title>pixel test page</title>
 </head>
@@ -37,7 +48,7 @@
   <li><button id="registrationButton" type="button">Registration (x10)</button></li>
 </ul></div>
 <div><ul>
-  <li><button id="siteButton" type="button">Site 1 (x10)</button></li>
+  <li><button id="siteButton" type="button">Site 6 (x10)</button></li>
   <li><button id="invalidpurchaseButton" type="button">Invalid Purchase (x10)</button></li>
   <li><button id="searchButton" type="button">Search (x10)</button></li>
   <li><button id="contactButton" type="button">Contact (x10)</button></li>
@@ -48,20 +59,72 @@
 </ul></div>
 <script type="text/javascript">
   for(var i = 0; i < 10; i++) {
-document.getElementById('addToWishlistButton').addEventListener('click', function() {fbq('track', 'AddToWishlist'); }, false);
-document.getElementById('addToCartButton').addEventListener('click', function() {fbq('track', 'AddToCart');}, false);
-document.getElementById('checkoutButton').addEventListener('click', function() {fbq('track', 'InitiateCheckout');}, false);
-document.getElementById('purchaseButton').addEventListener('click', function() {fbq('track', 'Purchase', {value: '12.34',currency: 'USD',});}, false);
-document.getElementById('subcribeButton').addEventListener('click', function() {fbq('track', 'Subscribe');}, false);
-document.getElementById('registrationButton').addEventListener('click', function() {fbq('track', 'CompleteRegistration');}, false);
-document.getElementById('siteButton').addEventListener('click', function() {fbq('track', 'Site1')}, false);
-document.getElementById('invalidpurchaseButton').addEventListener('click', function() {fbq('track', 'Purchase', {value: 'fdsjflds',currency: 'USD',});}, false);
-document.getElementById('searchButton').addEventListener('click', function() {fbq('track', 'Search'); }, false);    
-document.getElementById('contactButton').addEventListener('click', function() {fbq('track', 'Contact'); }, false);    
-document.getElementById('donateButton').addEventListener('click', function() {fbq('track', 'Donate'); }, false);    
-document.getElementById('rateButton').addEventListener('click', function() {fbq('track', 'Rate'); }, false);    
-document.getElementById('adClickButton').addEventListener('click', function() {fbq('track', 'AdClick'); }, false);
-document.getElementById('purchaseNoValueButton').addEventListener('click', function() {fbq('track', 'Purchase', {currency: 'USD',});}, false);
+document.getElementById('siteButton').addEventListener('click', function() {cbq('track', 'Site6')}, false);
+document.getElementById('addToWishlistButton').addEventListener('click', function() {cbq('track', 'AddToWishlist'); }, false);
+document.getElementById('addToCartButton').addEventListener('click', function() {cbq('track', 'AddToCart');}, false);
+document.getElementById('checkoutButton').addEventListener('click', function() {cbq('track', 'InitiateCheckout');}, false);
+document.getElementById('purchaseButton').addEventListener('click', function() {cbq('track', 'Purchase', {value: '12.34',currency: 'USD',});}, false);
+document.getElementById('subcribeButton').addEventListener('click', function() {cbq('track', 'Subscribe');}, false);
+document.getElementById('registrationButton').addEventListener('click', function() {cbq('track', 'CompleteRegistration');}, false);
+document.getElementById('invalidpurchaseButton').addEventListener('click', function() {cbq('track', 'Purchase', {value: 'fdsjflds',currency: 'USD',});}, false);
+document.getElementById('searchButton').addEventListener('click', function() {cbq('track', 'Search'); }, false);    
+document.getElementById('contactButton').addEventListener('click', function() {cbq('track', 'Contact'); }, false);    
+document.getElementById('donateButton').addEventListener('click', function() {cbq('track', 'Donate'); }, false);    
+document.getElementById('rateButton').addEventListener('click', function() {cbq('track', 'Rate'); }, false);    
+document.getElementById('adClickButton').addEventListener('click', function() {cbq('track', 'AdClick'); }, false);
+document.getElementById('purchaseNoValueButton').addEventListener('click', function() {cbq('track', 'Purchase', {currency: 'USD',});}, false);
 }
 </script>
 </body>
+-->
+<!-- ---------------------------------------------------------------------------------- -->
+<!-- Original CBQ body Code -->
+
+<meta name="facebook-domain-verification" content="qowwrhpyni79cf2pms3zixyrxoh3b4" />
+<title>pixel test page</title>
+</head>
+<body>
+    <h2>pixel test page</h2>
+    <div>
+    <ul>
+        <li><button id="addToWishlistButton" type="button">Add to Wishlist</button></li>
+        <li><button id="addToCartButton" type="button">Add to Cart</button></li>
+        <li><button id="checkoutButton" type="button">Check Out</button></li>
+        <li><button id="purchaseButton" type="button">Purchase</button></li>
+        <li><button id="subcribeButton" type="button">Subscribe</button></li>
+        <li><button id="registrationButton" type="button">Registration</button></li>
+    </ul>
+    </div>
+  
+<script type="text/javascript">
+document.getElementById('addToWishlistButton').addEventListener('click', function() {
+  cbq('track', 'AddToWishlist');
+}, false);
+
+document.getElementById('addToCartButton').addEventListener('click', function() {
+  cbq('track', 'AddToCart');
+}, false);
+
+document.getElementById('checkoutButton').addEventListener('click', function() {
+  cbq('track', 'InitiateCheckout');
+}, false);
+
+document.getElementById('purchaseButton').addEventListener('click', function() {
+  cbq('track', 'Purchase', {
+    value: '100',
+    currency: 'USD',
+  });
+}, false);
+
+document.getElementById('subcribeButton').addEventListener('click', function() {
+  cbq('track', 'Subscribe');
+}, false);
+
+document.getElementById('registrationButton').addEventListener('click', function() {
+  cbq('track', 'CompleteRegistration');
+}, false);
+
+</script>
+</body>
+
+<!-- ---------------------------------------------------------------------------------- -->
